# duckdb-apache-iceberg

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-lock.txt  requirements.txt
migrations/: 20260101000000-create_migrations_table.py  20260101000000-create_migrations_table.sql  20260101000100-create_expense_categories.py  20260101000100-create_expense_categories.sql  20260101000200-create_income_categories.py  20260101000200-create_income_categories.sql  20260101000300-create_expenses.py  20260101000300-create_expenses.sql  20260101000400-create_incomes.py  20260101000400-create_incomes.sql  20260101000500-seed_outros_categories.py  20260101000500-seed_outros_categories.sql
src/: main.py
src/db/: catalog.py  connection.py  migrations.py  store.py
src/models/: categories.py  common.py  expenses.py  incomes.py  reports.py
src/routers/: categories.py  expenses.py  incomes.py  reports.py
src/services/: _clock.py  _repository.py  categories.py  errors.py  expenses.py  incomes.py  reports.py
tests/: conftest.py  test_app.py  test_catalog_integration.py  test_categories_api.py  test_categories_service.py  test_connection.py  test_domain_migrations.py  test_expenses_api.py  test_expenses_service.py  test_incomes_api.py  test_incomes_service.py  test_migration_runner.py  test_migrations.py  test_reports_api.py  test_reports_service.py  test_repository.py
